# mine

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: downloader.rs  eula.rs  main.rs  version.rs
src/plugins/: plugins.rs
src/server/fabric/: fabric.rs
src/server/paper/: paper.rs
src/server/vanilla/: vanilla.rs
